test_regress/t/t_tagged_expr_complex_bad.out
%Error-UNSUPPORTED: t/t_tagged_expr_complex_bad.v:19:15: Tagged expression in non-simple assignment context
%Error: Exiting due to
